--- a/eloqJSnotes/5. Global_n_Local_Scope.md
+++ b/eloqJSnotes/5. Global_n_Local_Scope.md
@@ -8,13 +8,17 @@ lets try to explain it.
 
   - Global is where it is first originated (the variable)
   - Global/local Scope is always going to be related to the execution of some code/function
-  - Generally is var set inside of a function likely to be local to the function
+  - Generally if var has been set inside of a function, then likely to be local to the function
   
 But to understand Scope, you need to understand that EveryTime a Function/Code block gets Executed,
-it automatically creates its own (a new one) execution context, a $this object and an OUTER context Env; which makes it possible to further reach out onto a more Outer Var -Global one if it needs to.
+it automatically creates its own (a brand new) execution context for that particular function/code, 
+also it creates a $this object and an OUTER context Env; which makes it possible to further reach out, 
+onto a more Outer Var - a more Global one, if it needs to.
 
 ### Example js file  - Question is what is the value of message when you call function a
-I just explained it here above
+I just explained it here above. But basically, exec a, it also invokes b; which then needs to pick
+between content from var message inside of a, or var message sitting outside of a content.
+
 
 ```sh
 //var message is on a global scope
