--- a/eloqJSnotes/5. Global_n_Local_Scope.md
+++ b/eloqJSnotes/5. Global_n_Local_Scope.md
@@ -1,7 +1,7 @@
 
 # Scope
 
-[![N|global](globalScope.png)](global scope)
+[![N|global](globalScope.png)](https://github.com/stefan22/eloqJS/blob/master/eloqJSnotes/5.%20Global_n_Local_Scope.md)
 
 Global and Local Scope (or function scope). To understand Global is to know the difference, so
 lets try to explain it.
