--- a/eloqJSnotes/5. Global_n_Local_Scope.md
+++ b/eloqJSnotes/5. Global_n_Local_Scope.md
@@ -47,6 +47,10 @@ a();
       to go higher/outside of a if needs to 
     - finds var message and assigns the val of that var to message.
 
+    #### but lets say function b is inside of function a
+    - that changes things then => scope of function b is universe of function a and just like
+      Miguel said the other day, carries the advantage of protecting this content. Sort of encapsulating it 
+      within its outer function a. Cannot be called from outside of a anymore.
 
 
 
