--- a/eloqJSnotes/5. Global_n_Local_Scope.md
+++ b/eloqJSnotes/5. Global_n_Local_Scope.md
@@ -51,6 +51,7 @@ a();
     - that changes things then => scope of function b is universe of function a and just like
       Miguel said the other day, carries the advantage of protecting this content. Sort of encapsulating it 
       within its outer function a. Cannot be called from outside of a anymore.
+      Bottom line -> for purposes of exercise now value of message is the same for function a & b.
 
 
 
