--- a/eloqJSnotes/1._Types.md
+++ b/eloqJSnotes/1._Types.md
@@ -1,6 +1,6 @@
 
 # jHUnivJS
-  ========
+  
 
 - Browsers JS engine is a single threaded engine
 	- Once starts running, it will not stop until is done executing
@@ -9,7 +9,7 @@
 - On a function expression, the variable name returns the actual
   function, and not the result
 
-  ![s1](images/f1.png?raw=true "s1")
+  ![s1](f1.png?raw=true "s1")
 
 - function without return keyword won't return shait
 
@@ -30,7 +30,7 @@
 			a reference to its outer Environment.
 
 
-   ![s2](images/s2.png?raw=true "s2")
+   ![s2](s2.png?raw=true "s2")
 
 
    Function A define in Global Scope, sets x = 2 and
@@ -50,7 +50,7 @@
 
 
 
-   ![s3](images/s3.png?raw=true "s3")
+   ![s3](s3.png?raw=true "s3")
 
 
 
@@ -68,7 +68,7 @@
 	 it can be a nested value like that
 
 
-	 ![s4](images/s4.png?raw=true "s4")
+	 ![s4](s4.png?raw=true "s4")
 
 
 - Primitive type represent a SINGLE, immutable value
@@ -123,7 +123,7 @@
 
 
 
-  	![s5](images/s5.png?raw=true "s5")
+  	![s5](s5.png?raw=true "s5")
 
 
 
