--- a/eloqJSnotes/1.Types.md
+++ b/eloqJSnotes/1.Types.md
@@ -1,6 +1,7 @@
 
+
 # jHUnivJS
-  
+  ========
 
 - Browsers JS engine is a single threaded engine
 	- Once starts running, it will not stop until is done executing
@@ -21,22 +22,24 @@
   here only a Function signify a new Scope.
 
 
-- Scope Chain - pretty important  HUGE!!
-  ==============================
-	Executing a Function creates a new Execution Context!
-		each exec context has:
-			It's own variable Environment
-			special 'this' object and
-			a reference to its outer Environment.
+## Scope Chain - pretty important  HUGE!!
+
+Executing a Function creates a new Execution Context!    
+
+Each exec context has:   
+
+-	It's own variable Environment
+-	special 'this' object and
+-	a reference to its outer Environment.
 
 
    ![s2](s2.png?raw=true "s2")
 
 
-   Function A define in Global Scope, sets x = 2 and
-	calls function A - also in global scope.
-	Sets x = 5 and calls
-	B() that returns console.log(x)
+Function A define in Global Scope, sets x = 2 and
+calls function A - also in global scope.        
+Sets x = 5 and calls
+B() that returns console.log(x)
 
 	A: x = 2
 
@@ -59,13 +62,13 @@
 
 - JS has 7 built-in types:
 		
-			- 6 primitive and
-			- 1 Object type
+  - 6 primitive and
+  - 1 Object type
 
 
-- Object type 
-	-is a collection of name/value pairs and 
-	 it can be a nested value like that
+- Object type     
+  -  is a collection of name/value pairs and 
+  -	 it can be a nested value like that
 
 
 	 ![s4](s4.png?raw=true "s4")
@@ -74,51 +77,51 @@
 - Primitive type represent a SINGLE, immutable value
   meaning once value is set it cannot be changed NOT VALUE PAIRS
 
-  	- right off the top you know then that:
+  - right off the top you know then that:
   		
   		its not an object - even the simplest object is a collection
 	  	of name-value pair
 
-  	- Once is set, it becomes read-only!
-  	- You can create another value based on an existing value, but the 
-  	- memory space allocated for the first item does not change - it creates
-  	- another memory space.
+  - Once is set, it becomes read-only!
+  - You can create another value based on an existing value, but the 
+  - memory space allocated for the first item does not change - it creates
+  - another memory space.
 
   
 	  
-  	* Primitive type: Boolean:
+- Primitive type: Boolean:
 
-  			Only have True or False => and they are both Reserved Keywords
-
-
-  	* Primitive type: Undefined
-
-  			- Signifies that no value has ever been set
-  			- Undefined is the value that every variable gets when js engine
-  			  sets up the value in memory but not assigned a value yet.
+  - Only have True or False => and they are both Reserved Keywords
 
 
-  	• Primitive type: Null
+- Primitive type: Undefined
 
-  			- Null signifies the lack of value
-  			- undefined not assigned a value, nulls lacks value
-  			- both are primitive types
-
-
-  	* Primitive type: Number
-
-  			- represented under the hood as a 64-bit floating point
-  			  (JS does not have an integer type)
-  			- integers are a subset of doubles instead of a separate
-  			  data type
-
-  	* Primitive type: String
-
-  			- sequence of characters used to represent text
-  			  using single or double quotes
+  - Signifies that no value has ever been set
+  - Undefined is the value that every variable gets when js engine
+    sets up the value in memory but not assigned a value yet.
 
 
-  	* Primitive type: Symbol (new to ES6)
+- Primitive type: Null
+
+  - Null signifies the lack of value
+  - undefined not assigned a value, nulls lacks value
+  - both are primitive types
+
+
+- Primitive type: Number
+
+  - represented under the hood as a 64-bit floating point
+  	(JS does not have an integer type)
+  - integers are a subset of doubles instead of a separate
+  	data type
+
+- Primitive type: String
+
+  - sequence of characters used to represent text
+  	using single or double quotes
+
+
+- Primitive type: Symbol (new to ES6)
 
 
 
@@ -127,32 +130,31 @@
 
 
 
-  ** example  =>called Type COERCION.
+ - example  =>called Type COERCION.
 
-                When the javascript interpreter tries to compare this equality, it converts
-                one of the types to be the same type as the other variable, and only then
-                compares the values.
+        When the javascript interpreter tries to compare this equality, it converts
+        one of the types to be the same type as the other variable, and only then
+        compares the values.
 
-    var x= 4, y='4';
+        var x= 4, y='4';
+    
+        if (x == y) {
+    
+          //here there are equal. eventhough typeof x = number
+          // and typeof y = string
+    
+    
+        }
 
-    if (x == y) {
-
-      //here there are equal. eventhough typeof x = number
-      // and typeof y = string
-
-
-    }
-
-    Type Coercion = > means that the language converts something from one type
-                      to another type automatically - on the fly.
+ Type Coercion = > means that the language converts something from one type
+ to another type automatically - on the fly.
 
 
 ### If you wanna stop JS interpreter from changing out the type on the fly, then go to
-    the strict equality. (===)                
+the strict equality. (===)                
 
 
 ###  Things IF Statement would consider False
-
 
     if (false || null || undefined || "" || 0 || Nan) {
 
@@ -162,21 +164,21 @@
       console.log("All false");
     }  
 
-  false are => false, null, undefined, ""(empty string), 0 Nan
+false are => false, null, undefined, ""(empty string), 0 Nan
 
-  Note =>  You can do this to double check whether the boolean suppose to evaluate to
+Note =>  You can do this to double check whether the boolean suppose to evaluate to
            true or false
 
 
-          - Boolean(null);
-          - Boolean("");
-          - Boolean(0);
+     - Boolean(null);
+     - Boolean("");
+     - Boolean(0);
 
 
 
- ### What is True in JavaScript
+### What is True in JavaScript
 
- For comparisson purposes true is:
+For comparisson purposes true is:
 
     if (true && "hello" && 1 && -1 && 'false') {
 
@@ -190,8 +192,6 @@
 
   Any number that is non-zero will evaluate to true
   string 'false' will evaluate to true since isn't a non empty string 
-
-
 
 
 
