--- a/eloqJSnotes/1.Types.md
+++ b/eloqJSnotes/1.Types.md
@@ -172,9 +172,9 @@ Note =>  You can do this to double check whether the boolean suppose to evaluate
            true or false
 
 
-     - Boolean(null);
-     - Boolean("");
-     - Boolean(0);
+      Boolean(null);
+      Boolean("");
+      Boolean(0);
 
 
 
