--- a/eloqJSnotes/3. Functions.md
+++ b/eloqJSnotes/3. Functions.md
@@ -63,8 +63,7 @@ RECURSION
   A FUNCTION THAT CALLS ITSELF IS CALLED RECURSIVE
     
     
- EXERCISES
- =========
+#### EXERCISES
  
    EX.
          //write a function that takes 2 arguments and returns their minimum
