--- a/eloqJSnotes/3. Functions.md
+++ b/eloqJSnotes/3. Functions.md
@@ -18,8 +18,8 @@ FUNCTIONS
        -  FUNCTION DECLARATIONS LIKE THIS ONE ABOVE ARE NOT PART OF THE REGULAR TOP-TO-BOTTOM FLOW OF CONTROL - THEY
           MOVE TO THE TOP AND CAN BE USED BY ALL OF THE CODE IN THAT SCOPE.
           
-      -   THE PLACE WHERE THE COMPUTER STORES VALUES ETC WHILE EXECUTION IS CALLED STACK - EVERY TIME A FUNCTION IS CALLED
-          THE CURRENT CONTEXT IS PUT ON TOP OF THE STACK.
+       -   THE PLACE WHERE THE COMPUTER STORES VALUES ETC WHILE EXECUTION IS CALLED STACK - EVERY TIME A FUNCTION      
+           IS CALLED THE CURRENT CONTEXT IS PUT ON TOP OF THE STACK.
         
         
         
