--- a/eloqJSnotes/2.Undefined.md
+++ b/eloqJSnotes/2.Undefined.md
@@ -32,7 +32,7 @@ but instead returns `not defined`
 #### Reason is:
 `undefined` in JavaScript has a special meaning:    
 - it has been declared but
-- has not been yet set
+- value has not been yet set
 
 Here for example:    
 
