--- a/1.notesJS/1.Types.md
+++ b/1.notesJS/1.Types.md
@@ -10,7 +10,7 @@
 - On a function expression, the variable name returns the actual
   function, and not the result
 
-  ![s1](f1.png?raw=true "s1")
+  ![s1](images/f1.png?raw=true "s1")
 
 - function without return keyword won't return shait
 
@@ -35,7 +35,7 @@ Each exec context has:
 -	a reference to its outer Environment.
 
 
-   ![s2](s2.png?raw=true "s2")
+   ![s2](images/s2.png?raw=true "s2")
 
 
 Function A define in Global Scope, sets x = 2 and
@@ -55,7 +55,7 @@ B() that returns console.log(x)
 
 
 
-   ![s3](s3.png?raw=true "s3")
+   ![s3](images/s3.png?raw=true "s3")
 
 
 
@@ -73,7 +73,7 @@ B() that returns console.log(x)
   -	 it can be a nested value like that
 
 
-	 ![s4](s4.png?raw=true "s4")
+	 ![s4](images/s4.png?raw=true "s4")
 
 
 - Primitive type represent a SINGLE, immutable value
@@ -128,7 +128,7 @@ B() that returns console.log(x)
 
 
 
-  	![s5](s5.png?raw=true "s5")
+  	![s5](images/s5.png?raw=true "s5")
 
 
 
