--- a/1.notesJS/3.Nan_strict.md
+++ b/1.notesJS/3.Nan_strict.md
@@ -126,4 +126,4 @@ nothing returns undefined.
 
 
 summary
-![summary](strict.png?raw=true "mobile" target="_blank")
+![summary](images/strict.png?raw=true "mobile" target="_blank")
