--- a/1.notesJS/9.PassingVariables.md
+++ b/1.notesJS/9.PassingVariables.md
@@ -58,7 +58,8 @@ Given **b=a**, passing/copying by reference means
  with each other, and at this point they are not effective on 
  the other.
  
- #### <u>var a = {x: 7}; we declared an object</u>
+ #### <u>var a = {x: 7};               
+ we declared an object</u>
  
 > This is an object literal with a property x:7.     
  
