--- a/1.notesJS/9.PassingVariables.md
+++ b/1.notesJS/9.PassingVariables.md
@@ -59,7 +59,7 @@ Given **b=a**, passing/copying by reference means
  the other.
  
  
- ####  var a = {x: 7}; we declared an object</u>             
+####  var a = {x: 7}; we declared an object           
  
  
 > This is an object literal with a property x:7.     
