--- a/1.notesJS/9.PassingVariables.md
+++ b/1.notesJS/9.PassingVariables.md
@@ -59,7 +59,7 @@ Given **b=a**, passing/copying by reference means
  the other.
  
  
-####  :black_medium_small_square: var a = {x: 7}; we declared an object           
+####  :black_medium_small_square: <u>var a = {x: 7}; we declared an object</u>           
  
  
 > This is an object literal with a property x:7.     
