--- a/1.notesJS/9.PassingVariables.md
+++ b/1.notesJS/9.PassingVariables.md
@@ -87,13 +87,12 @@ Given **b=a**, passing/copying by reference means
  The **value of a** and **value of b** still the same (**003**)
  
  The **difference** between **passed by value** and **passed by reference**
- is that         
+ is that
  
- :white_medium_small_square: ***in passed by value** 
+ 
+ :white_medium_small_square: ***in passed by value**:           
  - the values once it's changed do not affect the original value of the original variable.
 
- :white_medium_small_square: **when passed by reference**
- 
- - when you change the value, the original object that's pointing
- to it is changed as well.
+ :white_medium_small_square: **when passed by reference**:       
+ - when you change the value, the original object that's pointing to it is changed as well.
  
