--- a/1.notesJS/9.PassingVariables.md
+++ b/1.notesJS/9.PassingVariables.md
@@ -90,7 +90,7 @@ Given **b=a**, passing/copying by reference means
  is that
  
  
- :white_medium_small_square: ***in passed by value**:           
+ :white_medium_small_square: **in passed by value**:           
  - the values once it's changed do not affect the original value of the original variable.
 
  :white_medium_small_square: **when passed by reference**:       
