--- a/1.notesJS/9.PassingVariables.md
+++ b/1.notesJS/9.PassingVariables.md
@@ -90,7 +90,7 @@ Given **b=a**, passing/copying by reference means
  is that
  
  
-:curly_loop: <u>in passed by value</u>:           
+:curly_loop: <u>**in passed by value**</u:           
 - the values once it's changed do not affect the original value of the original variable.
 
 :curly_loop: <u>when passed by reference</u>:       
