--- a/1.notesJS/9.PassingVariables.md
+++ b/1.notesJS/9.PassingVariables.md
@@ -90,9 +90,9 @@ Given **b=a**, passing/copying by reference means
  is that
  
  
-:curly_loop: <u>**in passed by value**</u:           
+:curly_loop: **in passed by value**:           
 - the values once it's changed do not affect the original value of the original variable.
 
-:curly_loop: <u>when passed by reference</u>:       
+:curly_loop: **when passed by reference**:       
 - when you change the value, the original object that's pointing to it is changed as well.
  
