--- a/1.notesJS/9.PassingVariables.md
+++ b/1.notesJS/9.PassingVariables.md
@@ -95,4 +95,59 @@ Given **b=a**, passing/copying by reference means
 
 :curly_loop: **when passed by reference**:       
 - when you change the value, the original object that's pointing to it is changed as well.
+
+
+
+<hr>
+If that wasn't enough   :interrobang:
+
+
+
+### Passing by Value
+
+// sets var a and takes a space on memory     
+**var a = 7;**
+
+// a is primitive so should copy by value, and take a
+   separate space in memory   
+**var b = a;**
+
+> "b" is no longer pointing anywhere "a" is pointing to
+
+console.log("var a: " + a);    
+console.log("var b: " + b);   
+  
+then we update **b = 5;**
+
+- **a** remains **7**
+- **b** is now **5**
+
+### Passing by Reference
+
+// object literal not a primitive value anymore    
+**var a = { x: 7 };**
+
+// now we're copying the memory location that is pointing
+   to 7 and not the actual value.
+   
+**var b = a;**
+
+console.log(a);  &nbsp; &nbsp; //Object {x:7}  
+console.log(b);  &nbsp; &nbsp; //Object {x:7}
+
+then we update **b.x = 5;**
+
+console.log(a); &nbsp; &nbsp; //Object {x:5}    
+console.log(a); &nbsp; &nbsp; //Object {x:5} 
+
+
+
+
+<kbd>summary</kbd>
+![js1](images/passinglast.png?raw=true "mobile" target="_blank")
+ 
+ 
+
+
+
  
