--- a/1.notesJS/9.PassingVariables.md
+++ b/1.notesJS/9.PassingVariables.md
@@ -99,7 +99,7 @@ Given **b=a**, passing/copying by reference means
 
 
 <hr>
-If that wasn't enough   :interrobang:
+### If that wasn't enough   :interrobang:
 
 
 
