--- a/1.notesJS/9.PassingVariables.md
+++ b/1.notesJS/9.PassingVariables.md
@@ -97,7 +97,7 @@ Given **b=a**, passing/copying by reference means
 - when you change the value, the original object that's pointing to it is changed as well.
 
 
-
+<br />
 <hr>
 ### If that wasn't enough   :interrobang:
 
@@ -117,7 +117,7 @@ Given **b=a**, passing/copying by reference means
 console.log("var a: " + a);    
 console.log("var b: " + b);   
   
-then we update **b = 5;**
+:black_small_square: then we update **b = 5;**
 
 - **a** remains **7**
 - **b** is now **5**
@@ -135,7 +135,7 @@ then we update **b = 5;**
 console.log(a);  &nbsp; &nbsp; //Object {x:7}  
 console.log(b);  &nbsp; &nbsp; //Object {x:7}
 
-then we update **b.x = 5;**
+:black_small_square: then we update **b.x = 5;**
 
 console.log(a); &nbsp; &nbsp; //Object {x:5}    
 console.log(a); &nbsp; &nbsp; //Object {x:5} 
