--- a/1.notesJS/9.PassingVariables.md
+++ b/1.notesJS/9.PassingVariables.md
@@ -148,18 +148,20 @@ console.log(a); &nbsp; &nbsp; //Object {x:5}
  
  :collision:
  
-``
+````
       
       var x = 5;
       var y = x;
       x = 10;
       console.log(y);
       
-      returns 5   // why u ask? :) cause x is first set to 5 in memory.  Then y is set to the value of 5 in another
-                  // allocated space in memory.
-                  // then you set x to 10.
-                  // whatever you do to x at this point, has nothing to do with y anymore.
-                  // y remains 5.
-``
+      returns 5   // why u ask? :) cause x is first set to 5 in memory.       
+                  // Then y is set to the value of 5 in another      
+                  // allocated space in memory.     
+                  // then you set x to 10.    
+                  // whatever you do to x at this point, has nothing to do with y anymore.    
+                  // y remains 5.    
+                  
+````
 
  
