--- a/1.notesJS/04.Default_Values.md
+++ b/1.notesJS/04.Default_Values.md
@@ -31,12 +31,14 @@ since no value passed for sidedish
     }
     
 ####  whatever coerces to true first:     
- -   true || false     
- -   `returns true `    
- -   "" || true     
- -   `return true`    
+ -   true || false
+    -   returns true
+ 
+ -   "" || true        
+    -   return true
+    
  -   "hello" || ""    
- -   `returns "hello"`    
+    -   returns "hello"    
  
  
  
