--- a/1.notesJS/10.AnotherWayToCreateObjects.md
+++ b/1.notesJS/10.AnotherWayToCreateObjects.md
@@ -1,6 +1,6 @@
 ## Another way to Create Objects
 
-## Constructors
+## :construction: Constructors
 
 ````
 function test () {    
@@ -36,7 +36,7 @@ returns `Crazy Horse`
 
 #### :school_satchel: But if you wanna ` encapsulate` some `data` within a `particular object` and `use` a `function` for it, then we would need this to point to something else: :small_red_triangle_down:
 
-### :construction: a function Constructors
+### :construction:  function Constructors
 
 
 
