--- a/1.notesJS/10.AnotherWayToCreateObjects.md
+++ b/1.notesJS/10.AnotherWayToCreateObjects.md
@@ -34,7 +34,7 @@ console.log( `window.myName` );
 returns `Crazy Horse`
 
 
-#### :school_satchel: But if you wanna ` encapsulate` some `data` within a `particular object` and `use` a `function` for it, then we would need this to point to something else: :small_red_triangle_down:
+#### :school_satchel: But if you wanna ` encapsulate` some `data` within a `particular object` and `use` a `function` for it, then we would need this to point to something else: :arrow_lower_left:
 
 ### :construction:  function Constructors
 
@@ -48,8 +48,7 @@ returns `Crazy Horse`
 
 
 
-<br /> <br /> <br />  <br /> 
-<br /> <br /> <br /> <br /> 
+
 <br /> <br /> <br />       
 
 
