--- a/1.notesJS/10.AnotherWayToCreateObjects.md
+++ b/1.notesJS/10.AnotherWayToCreateObjects.md
@@ -8,8 +8,9 @@ function test () {
     console.log("yellow sub");   
 }
 ````
-test();
+test();   
 
+<kbd>I</kbd>
 Whenever you execute a function, a **new execution context**
 is created within which that line (`console..`) is executed and also **gets
 a new variable this**.
@@ -37,8 +38,46 @@ returns `Crazy Horse`
 #### :school_satchel: But if you wanna ` encapsulate` some `data` within a `particular object` and `use` a `function` for it, then we would need this to point to something else: :arrow_lower_left:
 
 ### :construction:  function Constructors
+> capital C is just naming convention
 
+<kbd>II</kbd>
+:bulb: When I **invoke a function**, together with the **new keyword**,
+the JavaScript engine makes "**this**" **point** to the **object itself**
+that got created, which is **Circle**.
 
+```
+function Circle (radius) {
+   
+ console.log(this);   
+
+}
+//this returns Circle {}
+
+ 
+ var circle1 = new Circle(5);
+ > here returns Circle {}
+ var circle2 = new Circle(12);
+ > here returns Circle {}
+ 
+```
+
+<kbd>III</kbd>
+Using **this** to create a property of Circle Object
+
+Ex
+
+    function Circle(radius) {
+        this.radius = radius;
+    }
+    
+    var circle1 = new Circle(7);
+    console.log(circle1);
+    //returns circle1 object with its new property
+      radius.
+    returns Circle {radius: 7}
+    
+:name_badge:  The **function Constructor** itself **Cannot Returned**
+ **Anything**
 
 
 
@@ -54,5 +93,3 @@ returns `Crazy Horse`
 
 <kbd>summary</kbd>
 ![js1](images/passinglast.png?raw=true "mobile" target="_blank")
- 
- 
