--- a/1.notesJS/10.AnotherWayToCreateObjects.md
+++ b/1.notesJS/10.AnotherWayToCreateObjects.md
@@ -80,9 +80,9 @@ Ex
  **Anything**
 
 
+:black_medium_small_square:
 
-
-
+### :moneybag: Methods in JavaScript Are Just Functions That Are Set On Properties Of Objects
 
 
 
