--- a/1.notesJS/10.AnotherWayToCreateObjects.md
+++ b/1.notesJS/10.AnotherWayToCreateObjects.md
@@ -80,7 +80,7 @@ Ex
  **Anything**
 
 
-:black_medium_small_square:
+<kbd>Important</kbd>
 
 ### :moneybag: Methods in JavaScript Are Just Functions That Are Set On Properties Of Objects
 
