--- a/1.notesJS/10.AnotherWayToCreateObjects.md
+++ b/1.notesJS/10.AnotherWayToCreateObjects.md
@@ -85,7 +85,31 @@ Ex
 ### :moneybag: Methods in JavaScript Are Just Functions That Are Set On Properties Of Objects
 
 
+    function Circle(radius) {
+       //radius is a property
+       this.radius = radius;
+       //method now
+       this.getArea = function() {
+         return Math.pow(this.radius,2);
+       };
+    
+    }
+        
+var circle1 = new Circle(7);    
+console.log(circle1.getArea());
+    
+<kbd>OK</kbd> **EACH** new Circle() should have i**ts own** 
+**radius**. :triangular_ruler:   
+But **NOT** all Circles need to have the **getArea() function**. It should only be created **ONCE** and 
+**SHARE** among **all Circle instances**.
 
+####..And The Way To do That Is By Using A Special Property Called :checkered_flag:  PROTOTYPE.
+
+
+    
+    
+
+    
 
 
 <br /> <br /> <br />       
