--- a/1.notesJS/10.AnotherWayToCreateObjects.md
+++ b/1.notesJS/10.AnotherWayToCreateObjects.md
@@ -103,7 +103,7 @@ console.log(circle1.getArea());
 But **NOT** all Circles need to have the **getArea() function**. It should only be created **ONCE** and 
 **SHARE** among **all Circle instances**.
 
-####..And The Way To do That Is By Using A Special Property Called :checkered_flag:  PROTOTYPE :checkered_flag:
+####..And The Way To do That Is By Using A Special Property Called :checkered_flag:  PROTOTYPE :checkered_flag: :checkered_flag:
 
 
     
