--- a/1.notesJS/10.AnotherWayToCreateObjects.md
+++ b/1.notesJS/10.AnotherWayToCreateObjects.md
@@ -80,7 +80,7 @@ Ex
  **Anything**
 
 
-<kbd>IV</kbd>
+<kbd>IV</kbd>  <kbd>IMPORTANT</kbd>
 
 ### :moneybag: Methods in JavaScript Are Just Functions That Are Set On Properties Of Objects
 
