--- a/1.notesJS/10.Constructors_Prototypes.md
+++ b/1.notesJS/10.Constructors_Prototypes.md
@@ -13,8 +13,7 @@ test();
 <kbd>I</kbd>
 Whenever you execute a function, a **new execution context**
 is created within which the line (`console...`) is executed. It ALSO **gets
-a new variable this**.  (this is all from function Scope and variable ability to reach out to the outer function/scope
-when needed.
+a new variable this**.  (this is all from function Scope and variable ability to reach out to the outer function/ global scope when needed).
 
 - this is pointing to the **global Window Object**
 
