--- a/1.notesJS/10.Constructors_Prototypes.md
+++ b/1.notesJS/10.Constructors_Prototypes.md
@@ -90,7 +90,7 @@ Ex
        this.radius = radius;
        //method now
        this.getArea = function() {
-         return Math.pow(this.radius,2);     //:shipit: "this is not how you get the area"
+         return Math.pow(this.radius,2);     //disclaimer: "this is not how you get the area of a Circle"
        };
     
     }
