--- a/1.notesJS/10.Constructors_Prototypes.md
+++ b/1.notesJS/10.Constructors_Prototypes.md
@@ -105,8 +105,46 @@ But <kbd>NOT</kbd> all Circles need to have the **getArea() function**. It shoul
 
 ####..And The Way To do That Is By Using A Special Property Called :triangular_flag_on_post: :checkered_flag:  PROTOTYPE :checkered_flag: :checkered_flag:
 
+### Method Function using Prototype
 
+```
+    function Circle (radius) {
+        this.radius = radius;
+    }
+    //everyone instance needs a radius property
     
+    //getArea method upon request via prototype
+    //dont need arg - got this
+    Circle.prototype.getArea = function() {
+        return Math.pow(this.radius,2);
+    };
     
+```
+var cir1 = new Circle(12);   
 
-    
+-   cir1.__proto__ 
+   
+        returns `Object {}`
+
+-   Circle.prototype    
+        
+        return `Object {}`  //actually same exact object in both
+            
+
+     Inside Object:
+     
+         -  Object
+            -  constructor: Circle(radius)
+            -  getArea()
+            -  __proto__: Object
+
+
+
+:part_alternation_mark:
+> This way, using prototype you don't have to create a new
+method function for a particular property with every
+new instance you create.  :white_flower:
+
+
+
+ 
