--- a/1.notesJS/10.Constructors_Prototypes.md
+++ b/1.notesJS/10.Constructors_Prototypes.md
@@ -124,11 +124,11 @@ var cir1 = new Circle(12);
 
 -   cir1.__proto__ 
    
-        returns `Object {}`
+        returns Object {}
 
 -   Circle.prototype    
         
-        return `Object {}`  //actually same exact object in both
+        return Object {}  //actually same exact object in both
             
 
      Inside Object:
@@ -140,7 +140,7 @@ var cir1 = new Circle(12);
 
 
 
-:part_alternation_mark:
+:part_alternation_mark: :shipit:
 > This way, using prototype you don't have to create a new
 method function for a particular property with every
 new instance you create.  :white_flower:
