--- a/1.notesJS/11.ObjectLiteral_n_this_.md
+++ b/1.notesJS/11.ObjectLiteral_n_this_.md
@@ -1,10 +1,10 @@
 ## Object Literal and 'this'
 
-:congratulations: Last notes dealt with 'this' keyword and how it
-behaved inside of a function Constructor, or the
-object itself when that function is invoked.
+:congratulations: Last notes dealt with `'this'` keyword and **how it**
+**behaved inside of a function Constructor**, or the
+object itself **when** that **function is invoked**.
 
-#### :o2: Here, we'll look at the Object literal and how the 'this' keyword behaves inside of one.
+#### :o2: Here, we'll look at the `Object literal` and how the `'this'` keyword behaves inside of one.
  
  :red_circle: An **Object literal** is just **2 curly braces**
  
@@ -18,11 +18,11 @@ object itself when that function is invoked.
  
        };
 
-try executing function method:    
+:loudspeaker: after executing function method, we get:   
 
 - literalCircle.getArea();   
     `result` Object { radius: 10 }
     
-:bulb: So when an object literal gets created, `'this'`, instead
+:bulb: :moneybag: So when an object literal gets created, `'this'`, instead
 of pointing to the global Object, is actually
 **pointing** to the **actual object** that got created.
