--- a/1.notesJS/11.ObjectLiteral_n_this_.md
+++ b/1.notesJS/11.ObjectLiteral_n_this_.md
@@ -6,7 +6,7 @@ object itself **when** that **function is invoked**.
 
 #### :o2: Here, we'll look at the `Object literal` and how the `'this'` keyword behaves inside of one.
  
- :rocket: An **Object literal** is just **2 curly braces**  :rocket:   all clear then. :)
+ :rocket: An **Object literal** is just **2 curly braces**  :rocket:   all clear then. :)   `var x = {};`
  
  
     // Object literal and 'this'
