--- a/1.notesJS/11.ObjectLiteral_n_this_.md
+++ b/1.notesJS/11.ObjectLiteral_n_this_.md
@@ -26,3 +26,128 @@ object itself **when** that **function is invoked**.
 :bulb: :moneybag: So when an object literal gets created, `'this'`, instead
 of pointing to the global Object, is actually
 **pointing** to the **actual object** that got created.
+
+:loudspeaker: So now we could do something like this:
+
+        //Object literal and 'this'
+          var literalCircle = {
+               radius: 10,
+               getArea: function() {
+                 return Math.pow(this.radius,2);
+               }
+ 
+          };
+          console.log(literalCircle.getArea());
+
+:bulb: :moneybag: `this` refers to **literalCircle** and I
+read is perfectly legal to do so.
+
+### :bomb: Sure you must be wanting to know why 'this' is now referring to the Object created.
+
+- when you do **var something = {}**
+- that's sort of the same as doing: **new Object()**
+- so **new Object()** gets executed in the background
+- And **when** you **See** the **"new" keyboard**, the **'this' variable**
+  inside of that object refers to that object. And **NOT**
+  to the **outside window** or **global object**.
+  
+:rocket: so it kinda works like a **function Constructor**, but
+ the **new object** is implicit, I guess. :rocket:
+ 
+ 
+:bug:  Bug when inserting another function expression inside
+ of another function expression inside of an Object Literal
+ 
+ 
+        //Object literal and 'this'
+           var literalCircle = {
+                radius: 10,
+                getArea: function() {
+                   console.log(this); //res=20
+                   
+                   var increaseRadius = function() {
+                        this.radius = 20; 
+                   }
+                   increaseRadius(); 
+                   console.log(this.radius); //radius still 10
+                    
+                  return Math.pow(this.radius,2);
+                }
+  
+          };
+          console.log(literalCircle.getArea());
+          
+ 
+
+#### :bug: Back to the bug  :collision:    
+ The console.log(this) holding the value of this.radius=20,
+ now refers to the global object instead.
+ 
+> the value **this.radius** is **10**, and to **check what happened to the 20**,
+> when can do: **window.radius**, and we **get 20**.  :thumbsup:   
+
+####:loudspeaker: :bulb: recommended approach:
+:rocket:  this is very **ruby like**  :rocket:
+
+       //Object literal and 'this'
+       var literalCircle = {
+            var self = this;
+            radius: 10,
+            getArea: function() {
+               console.log(this); //res=20
+               
+               var increaseRadius = function() {
+                    self.radius = 20; 
+               }
+               increaseRadius(); 
+                    console.log(this.radius); //radius still 10
+                
+              return Math.pow(this.radius,2);
+            }
+
+       };
+       console.log(literalCircle.getArea());
+           
+           
+           
+ :rocket: Fixed is: :rocket:
+ 
+ - To set **var self = this** as shown above.
+ - Then **we use self, instead of this** inside of function
+   expression inside of the other function expression, inside
+   of an object literal, **where a 'new Object' instance** 
+   **never gets set**, although **clearly implicit** on 'this', **no longer pointing**
+   **to** the **window object or global** but instead its object
+   creator; which sort of **acts like a function Constructor**
+   when it's not, and **apparently** widely known to be **prone to**
+   **returning the proper value of this** whenever one function expression inside another one.   
+   Fixed avail. Solved in ECMAScript 6 :crown: :trophy: :moneybag:
+   
+   
+#### :barber:  :hotsprings: :warning: <kbd>Trick or Treat</kbd> :pig2: :dog2:
+ 
+ ```
+ function Dog(name) {
+    this.name = name;
+ }
+ 
+ Dog.prototype.bark = function() {
+    console.log(this.name + " likes barking !");
+ }
+ 
+ 
+  
+  Now use code below to figure out:   
+ 
+  
+  var lupo = new Dog('lupo', 'max');
+  lupo.bark();
+ 
+ ```
+ 
+ <kbd>Answer:</kbd>  lupo likes barking !
+ 
+ :rocket: The second argument `'max'` is not used in the
+  function, but it's perfectly legal to pass it in. :rocket:
+ 
+ 
