--- a/1.notesJS/11.ObjectLiteral_n_this_.md
+++ b/1.notesJS/11.ObjectLiteral_n_this_.md
@@ -33,6 +33,7 @@ of pointing to the global Object, is actually
           var literalCircle = {
                radius: 10,
                getArea: function() {
+                 console.log(this.radius);  //this is 10 here
                  return Math.pow(this.radius,2);
                }
  
