--- a/1.notesJS/11.ObjectLiteral_n_this_.md
+++ b/1.notesJS/11.ObjectLiteral_n_this_.md
@@ -45,12 +45,12 @@ read is perfectly legal to do so.
 
 ### :bomb: Sure you must be wanting to know why 'this' is now referring to the Object created.
 
-- when you do **var something = {}**
-- that's sort of the same as doing: **new Object()**
-- so **new Object()** gets executed in the background
-- And **when** you **See** the **"new" keyboard**, the **'this' variable**
-  inside of that object refers to that object. And **NOT**
-  to the **outside window** or **global object**.
+1. when you do **var something = {}**
+2. that's sort of the same as doing: **new Object()**
+3. so **new Object()** gets executed in the background
+4. And **when** you **See** the **"new" keyboard**, the **'this' variable**
+   inside of that object refers to that object. And **NOT**
+   to the **outside window** or **global object**.
   
 :rocket: so it kinda works like a **function Constructor**, but
  the **new object** is implicit, I guess. :rocket:
