--- a/1.notesJS/11.ObjectLiteral_n_this_.md
+++ b/1.notesJS/11.ObjectLiteral_n_this_.md
@@ -56,8 +56,8 @@ read is perfectly legal to do so.
  the **new object** is implicit, I guess. :rocket:
  
  
-:bug:  Bug when inserting another function expression inside
- of another function expression inside of an Object Literal
+:bug: <kbd>BUG</kbd> when inserting another function expression inside
+ of another function expression inside of an Object Literal (is the bug.)
  
  
         //Object literal and 'this'
