--- a/1.notesJS/11.ObjectLiteral_n_this_.md
+++ b/1.notesJS/11.ObjectLiteral_n_this_.md
@@ -111,7 +111,7 @@ read is perfectly legal to do so.
            
            
            
- :rocket: Fixed is: :rocket:
+ :rocket: Fixed is 1st line. The rest is the rest of it: nothing more/nothing less. :rocket:
  
  - To set **var self = this** as shown above.
  - Then **we use self, instead of this** inside of function
@@ -121,7 +121,8 @@ read is perfectly legal to do so.
    **to** the **window object or global** but instead its object
    creator; which sort of **acts like a function Constructor**
    when it's not, and **apparently** widely known to be **prone to**
-   **returning the proper value of this** whenever one function expression inside another one.   
+   **returning the expected value of this** keyword, during times when one function expression
+   happens to be residing inside of another one.   
    Fixed avail. Solved in ECMAScript 6 :crown: :trophy: :moneybag:
    
    
