--- a/1.notesJS/11.ObjectLiteral_n_this_.md
+++ b/1.notesJS/11.ObjectLiteral_n_this_.md
@@ -115,14 +115,14 @@ read is perfectly legal to do so.
  
  - To set **var self = this** as shown above.
  - Then **we use self, instead of this** inside of function
-   expression inside of the other function expression, inside
+   expression, inside of the other function expression, inside
    of an object literal, **where a 'new Object' instance** 
-   **never gets set**, although **clearly implicit** on 'this', **no longer pointing**
-   **to** the **window object or global** but instead its object
+   **never gets set**, although **clearly implicit** on 'this', nonetheless **no longer pointing**
+   **to** the **window object or global** but instead pointing to its object
    creator; which sort of **acts like a function Constructor**
    when it's not, and **apparently** widely known to be **prone to**
-   **returning the expected value of this** keyword, during times when one function expression
-   happens to be residing inside of another one.   
+   **returning the assumed value for the this** keyword, during times when one function expression
+   happens to be residing inside of another one.  True.     
    Fixed avail. Solved in ECMAScript 6 :crown: :trophy: :moneybag:
    
    
