--- a/1.notesJS/11.ObjectLiteral_n_this_.md
+++ b/1.notesJS/11.ObjectLiteral_n_this_.md
@@ -114,14 +114,14 @@ read is perfectly legal to do so.
  :rocket: Fixed is 1st line. The rest is the rest of it: nothing more/nothing less. :rocket:
  
  - To set **var self = this** as shown above.
- - Then **we use self, instead of this** inside of function
+ - Then **we use self, instead of 'this'** inside of function
    expression, inside of the other function expression, inside
    of an object literal, **where a 'new Object' instance** 
    **never gets set**, although **clearly implicit** on 'this', nonetheless **no longer pointing**
    **to** the **window object or global** but instead pointing to its object
    creator; which sort of **acts like a function Constructor**
    when it's not, and **apparently** widely known to be **prone to**
-   **returning the assumed value for the this** keyword, during times when one function expression
+   **returning the assumed value for the 'this'** keyword, during times when one function expression
    happens to be residing inside of another one.  True.     
    Fixed avail. Solved in ECMAScript 6 :crown: :trophy: :moneybag:
    
