--- a/1.notesJS/12.Arrays.md
+++ b/1.notesJS/12.Arrays.md
@@ -1,7 +1,7 @@
 ## arrays - collections of data:floppy_disk:
 > even different type of objects within same array   
  
-### :black_medium_small_square: creating an array 
+### :crossed_flags: creating an array 
 var array = new Array();
 
 ````
