--- a/1.notesJS/12.Arrays.md
+++ b/1.notesJS/12.Arrays.md
@@ -1,7 +1,7 @@
 ## arrays - collections of data:floppy_disk:
 > even different type of objects within same array   
  
-### :crossed_flags: creating an array 
+### :crossed_flags: creating an array (first way of creating arrays)
 var array = new Array();
 
 ````
@@ -64,4 +64,4 @@ Ex. might as well do the object one too then:
 - console.log(**array[3].course**);   
 - returns **The Fractured But Whole**
 
-### :black_medium_small_square: another way to create an array
+### :crossed_flags: Creating an array  (another way to create an array)
