--- a/1.notesJS/12.Arrays.md
+++ b/1.notesJS/12.Arrays.md
@@ -59,7 +59,9 @@ Ex:
     
     returns `hello James Hetfield`
     
-Ex. **might as well do the object one too then**:
+**might as well do the object one too then**:
+
+Ex.
 
 - console.log(**array[3].course**);   
 - returns **The Fractured But Whole**
